--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  image_picker: ^0.8.7+5
+  fluttertoast: ^8.2.2
+  intl: ^0.18.0
+  autocomplete_textfield:
+  syncfusion_flutter_pdfviewer:
+  file_selector:
+  file_picker: ^5.2.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
