--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,14 @@ dependencies:
   autocomplete_textfield:
   syncfusion_flutter_pdfviewer:
   file_selector:
-  file_picker: ^5.2.6
+  file_picker: ^4.0.0
   shared_preferences: ^2.1.1
   simple_gradient_text: ^1.3.0
+  flutter_form_builder:
+  path_provider: ^2.0.2
+  path: ^1.8.0
+  dio:
+  flutter_rating_bar: ^4.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
