--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image_picker: ^0.8.7+5
+  image_picker: ^1.1.1
   fluttertoast: ^8.2.2
   intl: ^0.18.0
   autocomplete_textfield:
@@ -44,6 +44,8 @@ dependencies:
   path: ^1.8.0
   dio:
   flutter_rating_bar: ^4.0.1
+  webview_flutter: ^2.0.13
+  open_file: ^3.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
