--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
-        android:label="srr_management"
+        android:label="SRR Management"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
