--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   dio:
   flutter_rating_bar: ^4.0.1
   webview_flutter: ^2.0.13
-  open_file: ^3.2.1
+  open_file:
+  flutter_file_downloader: ^1.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
